<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.quizzycheese.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/head_View"
            style="@style/MainText.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <ImageView
            android:id="@+id/imageView"
            style="@style/Image"
            android:layout_below="@id/head_View"
            android:src="@drawable/finale_image" />

        <TextView
            android:id="@+id/question_tv"
            style="@style/MainText.Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:background="@drawable/rectangle"
            android:text="@string/welcome" />

        <LinearLayout
            android:id="@+id/first_tv_row"
            style="@style/Basic.Top"
            android:layout_below="@id/question_tv"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/answerTVA"
                style="@style/MainText.Static"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/answerA" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/answerTVB"
                style="@style/MainText.Static"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/answerB" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/first_button_row"
            style="@style/Basic.Down"
            android:layout_below="@id/first_tv_row"
            android:orientation="horizontal">

            <Button
                android:id="@+id/answerA"
                style="@style/QuizButton"
                android:onClick="buttonA" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/answerB"
                style="@style/QuizButton"
                android:onClick="buttonB" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_tv_row"
            style="@style/Basic"
            android:layout_below="@id/first_button_row"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/answerTVC"
                style="@style/MainText.Static"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/answerC" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/answerTVD"
                style="@style/MainText.Static"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/answerD" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_button_row"
            style="@style/Basic.Down"
            android:layout_below="@id/second_tv_row"
            android:orientation="horizontal">

            <Button
                android:id="@+id/answerC"
                style="@style/QuizButton"
                android:onClick="buttonC" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/answerD"
                style="@style/QuizButton"
                android:onClick="buttonD" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>
